button alignment, slider arrow fixed

--- a/src/home/css/_header.scss
+++ b/src/home/css/_header.scss
@@ -35,7 +35,7 @@
 		border-radius: 23.5px;
 		color: #ffffff;
 		height: 100%;
-		padding: 13px 21px;
+		padding: 11px 21px 0 21px;
 		text-align: center;
 		width: 100%;
 		&.active {
